--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
 
 </head>
 <body class="bg-gray-900 text-white flex items-center justify-center min-h-screen p-5">
-    <div id="particles-js"></div>
+    <!-- Latar belakang Particles.js (tidak ikut scroll) -->
+    <div id="particles-js" class="fixed top-0 left-0 w-full h-full z-[-1]"></div>
 
-    <div class="max-w-lg p-8 rounded-xl shadow-lg bg-gray-800" data-aos="fade-up">
+    <!-- Konten yang dapat discroll -->
+    <div class="max-w-lg p-8 rounded-xl shadow-lg bg-gray-800 bg-opacity-40 overflow-auto z-10" data-aos="fade-up">
+        <!-- Isi konten di sini -->
         <h2 class="text-2xl font-bold mb-6 text-center">Kalkulator PPh 21</h2>
                 
         <label class="block mb-2 font-semibold text-white">THR (Gross Sebelum Pajak):</label>
