feat: penyesuaian meta description untuk meningkatkan user experience

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="hikvn">
-    <meta name="description" content="Kalkulator PPh 21 - Hitung pajak penghasilan Anda dengan mudah dan cepat menggunakan kalkulator online kami.">
+    <meta name="description" content="PPh21 Gaji Setelah THR- Hitung pajak penghasilan Anda dengan mudah dan cepat menggunakan kalkulator online kami.">
     <meta name="keywords" content="Kalkulator PPh 21, Pajak Penghasilan, Perhitungan Pajak, Pajak Karyawan, Pajak Online">
     <meta name="robots" content="index, follow">
     
