feat: menambahkan gtag manager untuk aliran data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     
     <title>Kalkulator PPh21 Gaji | Setelah THR</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ1B43RF6F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DJ1B43RF6F');
+    </script>
+
     <!-- Tailwaind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
